syntax = "proto3";

package transaction;

import "google/protobuf/timestamp.proto";

service TransactionService {
    rpc sendTransactionEvent(TransactionEvent) returns (Ack);
    rpc getTransactionHistory(TransactionHistoryRequest) returns (TransactionHistoryResponse);
}

message TransactionEvent {
    MessaageType type = 1;
    string reference = 2;
    string currency = 3;
    int64 amount = 4;
    int32 fractionalDigits = 5;
    string feesCurrency = 6;
    int64 feesAmount = 7;
    int32 feesFractionalDigits = 8;
    google.protobuf.Timestamp providerEventTime = 9;
    Provider provider = 10;
    string cardToken = 11;
    string eventId = 12;
}

enum MessaageType { 
    AUTHORIZATION = 0;
    CLEARING = 1;
}

message Ack {
    AckStatus status = 1;
    google.protobuf.Timestamp eventTime = 2;
}

enum AckStatus {
    SUCCESS = 0;
    FAILED = 1;
}

enum Provider {
    PSP1 = 0;
    PSP2 = 1;
}

enum TransactionStatus {
    PENDING = 0;
    SUCCESSFUL = 1;
}

message Transaction {
    string id = 1;
    Money total = 2;
    TransactionStatus status = 3;
    CardDetails cardDetails = 4;
    string reference = 5;
}

message Money {
    int64 amount = 1;
    int32 fractionalDigits = 2;
    string currency = 3;
}

message TransactionHistoryResponse {
    repeated Transaction transactions = 1;
    google.protobuf.Timestamp currentTime = 2;
}

message CardDetails {
    string censoredCardNumber = 1;
    CardSchema cardSchewma = 2;
}

message TransactionHistoryRequest {
    string userId = 1;
}

enum CardSchema {
    VISA = 0;
    MASTER_CARD = 2;
    AMERICAN_EXPRESS = 3;
    MADA = 4;
    MEZA = 5;
}